--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.16.2",
-    "cheerio": "^1.0.0-rc.2"
+    "cheerio": "^1.0.0-rc.2",
+    "electron-settings": "^3.1.1"
   },
   "devDependencies": {
     "electron": "^1.6.11",
-    "electron-builder": "^19.16.2"
+    "electron-builder": "^19.16.2",
+    "electron-builder-squirrel-windows": "^19.16.0"
   }
 }
