--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "pack": "electron-builder --dir",
     "dist": "electron-builder",
     "try": "electron-builder --publish onTagOrDraft",
-    "release": "electron-builder -mwl --publish onTagOrDraft"
+    "release": "electron-builder -ml --publish onTagOrDraft"
   },
   "repository": {
     "type": "git",
@@ -32,7 +32,6 @@
   },
   "devDependencies": {
     "electron": "^1.6.11",
-    "electron-builder": "^19.16.2",
-    "electron-builder-squirrel-windows": "^19.16.0"
+    "electron-builder": "^19.16.2"
   }
 }
